apps/backstage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage
  namespace: workloads
  labels:
    app: backstage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backstage
  template:
    metadata:
      labels:
        app: backstage
      annotations:
        backstage.guslopez.dev/config-checksum: "sha256:a73ce6d28ddd0b76a96d9c1ced1042f172f2de2a23aded3f046cf1fdc30a3b04"
    spec:
      serviceAccountName: backstage
      containers:
      - name: backstage
        image: docker.io/guslopezc/backstage:v20
        imagePullPolicy: Always
        ports:
        - containerPort: 7007
        args:
          - node
          - packages/backend
          - --config
          - app-config.yaml
          - --config
          - app-config.production.yaml
          - --config
          - /app/config/override.yaml
        readinessProbe:
          httpGet:
            path: /
            port: 7007
          initialDelaySeconds: 30
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 7007
          initialDelaySeconds: 60
          periodSeconds: 15
        volumeMounts:
        - mountPath: /app/templates
          name: store-templates
        - mountPath: /app/plugins
          name: store-plugins
        - mountPath: /app/config
          name: store-config
        resources:
          requests:
            memory: 512Mi
            cpu: 250m
          limits:
            memory: 1Gi
            cpu: 1000m
      volumes:
      - name: backstage-templates
        configMap:
          name: backstage-templates
          defaultMode: 420
      - name: store-templates
        emptyDir: {}
      - name: store-plugins
        emptyDir: {}
      - name: store-config
        emptyDir: {}
