apps/backstage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backstage
  namespace: workloads
spec:
  selector:
    app: backstage
  ports:
    - protocol: TCP
      port: 7007
      targetPort: 7007
