apps/backstage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backstage
  namespace: workloads
  annotations:
    konghq.com/protocols: "https"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: kong
  tls:
  - hosts:
    - backstage.local
    secretName: backstage-tls
  rules:
  - host: backstage.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backstage
            port:
              number: 7007
